--- a/css/landing.css
+++ b/css/landing.css
@@ -85,14 +85,14 @@ body {
     padding: 1vh;
 
     /* Box styling */
-    background-color: #fec582;
-    border: 0.1vh solid #b53434;
+    background-color: hsl(32, 98%, 75%);
+    border: 0.1vh solid hsl(0, 55%, 46%);
     border-radius: 0.3vh;
 
     /* Font */
     font-family: 'Dosis', sans-serif;
     font-weight: 700;
-    color: #b53434;
+    color: hsl(0, 55%, 46%);
 }
 
 /* Footer */
@@ -105,6 +105,6 @@ footer {
 
     /* Font */
     font-family: 'Dosis', sans-serif;
-    color: #b53434;
+    color: hsl(0, 55%, 46%);
     opacity: 0.8;
 }
