--- a/css/landing.css
+++ b/css/landing.css
@@ -86,13 +86,25 @@ body {
 
     /* Box styling */
     background-color: hsl(32, 98%, 75%);
-    border: 0.1vh solid hsl(0, 55%, 46%);
+    outline: 0.1vh solid hsl(0, 55%, 46%);
     border-radius: 0.3vh;
 
+    /* Transition */
+    transition: all 0.5s ease-out;
+}
+
+.nav-item>a {
     /* Font */
     font-family: 'Dosis', sans-serif;
     font-weight: 700;
     color: hsl(0, 55%, 46%);
+    text-decoration: none;
+}
+
+.nav-item:hover {
+    /* Hover transformation */
+    background-color: hsl(32, 57%, 64%);
+    outline: 0.3vh solid hsl(0, 55%, 46%);
 }
 
 /* Footer */
