Change nav menu margin animation

--- a/css/landing.css
+++ b/css/landing.css
@@ -90,20 +90,20 @@ body {
 
 @keyframes slideup {
     from {
-        margin-top: 5vh;
+        margin: 5vh 0;
         column-gap: 5vh;
     }
 
     to {
-        margin-top: 2vh;
+        margin-top: 3vh;
+        margin-bottom: 2vh;
         column-gap: 2vh;
     }
 }
 
 #nav-menu menu {
     /* Positioning */
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin: 5vh 0;
 
     column-gap: 5vh;
     justify-content: center;
