Assigned animations to ID and class

--- a/css/landing.css
+++ b/css/landing.css
@@ -186,9 +186,22 @@ body {
 
     /* Opacity */
     opacity: 0;
+
+    /* Animation */
+    animation: showarticle 0.5s ease-out paused forwards;
 }
 
 #products-article {
+    /* Animation */
+    animation: showarticle 0.5s ease-out paused forwards;
+}
+
+#concact-article {
+    /* Animation */
+    animation: showarticle 0.5s ease-out paused forwards;
+}
+
+#about-article {
     /* Animation */
     animation: showarticle 0.5s ease-out paused forwards;
 }
