--- a/css/landing.css
+++ b/css/landing.css
@@ -231,6 +231,10 @@ body {
     font-size: 12px;
 }
 
+.project:hover {
+    background-color: rgb(255, 224, 151);
+}
+
 .project img {
     /* Dimensions */
     max-width: 20vh;
