--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ main {
 
 @media only screen and (max-width: 1079px) {
     main {
-        overflow: hidden;
+        height: 215vh;
     }
     
     #portfolio {
