--- a/css/styles.css
+++ b/css/styles.css
@@ -123,8 +123,8 @@ main {
 
 #products-article {
     /* Animation */
-    animation: showarticle 0.5s ease paused forwards;
-    -webkit-animation: webkit-showarticle 0.5s ease paused forwards;
+    animation: showarticle 0.5s ease forwards;
+    opacity: 0;
 
     /* Positioning and dimensions */
     position: absolute;
@@ -250,7 +250,6 @@ main {
 #contact-article {
     /* Animation */
     animation: showarticle 0.5s ease paused forwards;
-    -webkit-animation: webkit-showarticle 0.5s ease paused forwards;
     opacity: 0;
 
     /* Positioning and dimensions */
@@ -277,7 +276,6 @@ main {
 #about-article {
     /* Animation */
     animation: showarticle 0.5s ease paused forwards;
-    -webkit-animation: webkit-showarticle 0.5s ease paused forwards;
     opacity: 0;
 
     /* Positioning and dimensions */
@@ -301,16 +299,6 @@ main {
 }
 
 @keyframes showarticle {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes webkit-showarticle {
     from {
         opacity: 0;
     }
